# ComfyUI-UltraPixel

./: README.md  nodes.py  pyproject.toml  requirements.txt  ultrapixel.py  workflow.json  workflow_controlnet.json  workflow_default.json
core/: __init__.py
core/data/deg_kair_utils/: utils_model.py
core/utils/: base_dto.py
inference/: utils.py
modules/: common_ckpt.py  controlnet.py  inr_fea_res_lite.py  model_4stage_lite.py
train/: base.py  train_b.py  train_c.py  train_personalized.py  train_t2i.py  train_ultrapixel_control.py
